--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@iconify/react": "^5.0.1",
     "@react-three/drei": "^9.107.0",
     "@react-three/fiber": "^8.16.8",
+    "ldrs": "^1.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "three": "^0.165.0"
